# ezip

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  _Makefile  decrypt_util.hpp  ezip  main.hpp
include/: decrypt_util.hpp  driver.hpp  encrypt_util.hpp  util.hpp
py/: keygen.py
src/: decrypt_util.cpp  decrypt_util.hpp  driver.cpp  encrypt_util.cpp  encrypt_util.hpp  main.cpp  main.hpp  util.cpp  util.hpp
test/: round_constants.py
test-data/: 1234.key  16-bytes.txt
